@@ -1,3 +1,12 @@
+2004-01-01  Mikhael Goikhman  <migo@homemail.com>
+
+	* screenshots/desktops/GlenLeeEdwards-desk3-1024x768/description.inc:
+	updated url
+
+	* documentation/faq/index.php:
+	* news/index.php:
+	regenerated
+
 2003-12-08  Mikhael Goikhman  <migo@homemail.com>
 
 	* screenshots/desktops/Mikhael-desk-1280x1024/description.inc:
